Bug #26019 - valgrind warning ndbcluster_log_schema_op/safe_mutex_lock invalid read protect the setting of ndb_schema_share = NULL with a mutex